--- a/src/flask/templates/index.html
+++ b/src/flask/templates/index.html
@@ -8,28 +8,19 @@
 <div id="requests">
     <div id="POSTS">
         <h2>POST Requests</h2>
-
-        <button type="button" class="button sendBatch"> <a href="/create_message_batch">Send Message Batch</a></button> <br>
-        <button type="button" class="button sendSingle"><a href="/create_message_single">Send Single Message</a></button>
+        <!-- TODO:
+            -   Update with new POST endpoints 
+                    send_pre_invitation
+        -->
     </div>
 
     <div id="GETS">
         <h2>GET Requests</h2>
-
-        <div>
-            <form action="{{ url_for('get_message_status') }}" method="POST">
-                Message ID <input name="messageID" value="2msn7Pgg7lhUukLidr0ENr6oBbL"><br>
-                <button type="submit" class="button getStatus">Get Message Status</button>
-            </form>
-        </div>
-        <br>
-        </div>
-            <form action="{{ url_for('get_nhs_app_details') }}" method="POST">
-                ODS Code <input name="ODSCode" value="T00001">
-                Page number <input name="PageNumber" value="1"><br>
-                <button type="submit" class="button getAppDetails">Get NHS App Account Details</button>
-            </form>
-        </div>
+        <!-- TODO:
+            -   Update with new GET endpoints 
+                    get_message_status
+                    get_nhs_app_details
+        -->
     </div>
 </div>
 
