--- a/src/flask/templates/base.html
+++ b/src/flask/templates/base.html
@@ -1,14 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/main.css') }}"
+    />
     {% block head %}{% endblock %}
-</head>
-<body>
-    <h1>NHS Notify Integration</h1>
-    <a href="/"> Home </a>
+  </head>
+  <body>
+    <h1>NHS Notify Integration Example Endpoints</h1>
     {% block body %}{% endblock %}
-</body>
+  </body>
+  <script>
+    function sendBatchPreInvitationRequest() {
+      // Hardcoded request body
+      const requestBody = {
+        data: [
+          {
+            "NHS#": "9990548609",
+            dob: "1932-01-06",
+          },
+          {
+            "NHS#": "9800100369",
+            dob: "1983-12-03",
+          },
+        ],
+      };
+
+      // Display the request body in JSON format before sending the request
+      document.getElementById(
+        "batchPreInvitationRequestBodyDisplay"
+      ).innerHTML = `
+              <h3>Request Body:</h3>
+              <pre>${JSON.stringify(requestBody, null, 2)}</pre>
+          `;
+
+      const url = "http://localhost:5001/send-pre-invitation"; // Public test API
+
+      fetch(url, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify(requestBody),
+      })
+        .then((response) => response.json())
+        .then((data) => {
+          // Display the response data in the HTML
+          document.getElementById(
+            "batchPreInvitationResponseDisplay"
+          ).innerHTML = `
+                  <h3>Response:</h3>
+                  <pre>${JSON.stringify(data, null, 2)}</pre>
+              `;
+        })
+        .catch((error) => {
+          // Display any error that occurs in the HTML
+          document.getElementById(
+            "batchPreInvitationResponseDisplay"
+          ).innerHTML = `
+                <h3>Error:</h3>
+                <pre>${error}</pre>
+            `;
+        });
+    }
+
+    function sendSinglePreInvitationRequest() {
+      // Hardcoded request body
+      const requestBody = {
+        data: [
+          {
+            "NHS#": "9990548609",
+            dob: "1932-01-06",
+          },
+        ],
+      };
+
+      // Display the request body in JSON format before sending the request
+      document.getElementById(
+        "singlePreInvitationRequestBodyDisplay"
+      ).innerHTML = `
+              <h3>Request Body:</h3>
+              <pre>${JSON.stringify(requestBody, null, 2)}</pre>
+          `;
+
+      const url = "http://localhost:5001/send-pre-invitation"; // Public test API
+
+      fetch(url, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify(requestBody),
+      })
+        .then((response) => response.json())
+        .then((data) => {
+          // Display the response data in the HTML
+          document.getElementById(
+            "singlePreInvitationResponseDisplay"
+          ).innerHTML = `
+                  <h3>Response:</h3>
+                  <pre>${JSON.stringify(data, null, 2)}</pre>
+              `;
+        })
+        .catch((error) => {
+          // Display any error that occurs in the HTML
+          document.getElementById(
+            "singlePreInvitationResponseDisplay"
+          ).innerHTML = `
+                <h3>Error:</h3>
+                <pre>${error}</pre>
+            `;
+        });
+    }
+
+    function sendGetMessageStatusRequest() {
+      // Get the post ID from the input field
+      const postId = document.getElementById("postId").value;
+
+      // Construct the URL with the path parameter
+      const url = `http://localhost:5001/message-status/${postId}`; // Public test API
+
+      fetch(url, {
+        method: "GET",
+      })
+        .then((response) => {
+          if (!response.ok) {
+            throw new Error(`HTTP error! Status: ${response.status}`);
+          }
+          return response.json();
+        })
+        .then((data) => {
+          // Display the response data in the HTML
+          document.getElementById("getMessageStatusResponseDisplay").innerHTML = `
+                    <h3>Response:</h3>
+                    <pre>${JSON.stringify(data, null, 2)}</pre>
+                `;
+        })
+        .catch((error) => {
+          // Display any error that occurs in the HTML
+          document.getElementById("getMessageStatusResponseDisplay").innerHTML = `
+                    <h3>Error:</h3>
+                    <pre>${error.message}</pre>
+                `;
+        });
+    }
+  </script>
 </html>
