Updated input to list of NHS numbers

--- a/src/flask/templates/index.html
+++ b/src/flask/templates/index.html
@@ -27,8 +27,8 @@
     <h2>Get Message Status</h2>
     <p><strong>Endpoint:</strong><code>/message-status/{message_id}</code></p>
     <p><strong>Method:</strong> <code>GET</code></p>
-    <label for="postId">Enter Message ID:</label>
-    <input type="text" id="postId">
+    <label for="messageId">Enter Message ID:</label>
+    <input type="text" id="messageId">
     <button onclick="sendGetMessageStatusRequest()">Send GET Request</button>
     <div id="getMessageStatusResponseDisplay"></div>
 </section>
