--- a/src/flask/templates/index.html
+++ b/src/flask/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block body%}
 <section>
-    <h1>Send Batch Pre Inviation</h1>
+    <h1>Send Batch Pre Invitation</h1>
     <p><strong>Endpoint:</strong> <code>/send-pre-invitation</code></p>
     <p><strong>Method:</strong> <code>POST</code></p>
     <button onclick="sendBatchPreInvitationRequest()">Send Request</button>
@@ -15,7 +15,7 @@
 </section>
 
 <section>
-    <h1>Send Single Pre Inviation</h1>
+    <h1>Send Single Pre Invitation</h1>
     <p><strong>Endpoint:</strong> <code>/send-pre-invitation</code></p>
     <p><strong>Method:</strong> <code>POST</code></p>
     <button onclick="sendSinglePreInvitationRequest()">Send Request</button>
